--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta name="description" content="Komship merupakan platform layanan pengiriman yang bertujuan memudahkan kamu untuk mengirim paket yang didukung dengan metode COD atau Non-COD tanpa batas minimum pengiriman." />
+    <meta name="keywords" content="komship" />
+    <link rel="canonical" href="https://komship.id/" />
+    <meta property="og:locale" content="id" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Komship.id" />
+    <meta property="og:description" content="Komship merupakan platform layanan pengiriman yang bertujuan memudahkan kamu untuk mengirim paket yang didukung dengan metode COD atau Non-COD tanpa batas minimum pengiriman." />
+    <meta property="og:url" content="https://komship.id/" />
+    <meta property="og:site_name" content="Komship" />
+    <meta property="og:image" content="https://komship.id/img/komship.png" />
+    <meta property="og:image:width" content="500" />
+    <meta property="og:image:height" content="500" />
+    <meta property="og:see_also" content="https://www.instagram.com/komship/">
+    <meta property="og:see_also" content="https://www.facebook.com/komship/">
     <link rel="icon" href="<%= BASE_URL %>komship.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
