add google tag manager

--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,60 @@
 <!DOCTYPE html>
 <html lang="id">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <meta name="description" content="Komship merupakan platform layanan pengiriman yang bertujuan memudahkan kamu untuk mengirim paket yang didukung dengan metode COD atau Non-COD tanpa batas minimum pengiriman." />
-    <meta name="keywords" content="komship" />
-    <link rel="canonical" href="https://komship.id/" />
-    <meta property="og:locale" content="id" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Komship.id" />
-    <meta property="og:description" content="Komship merupakan platform layanan pengiriman yang bertujuan memudahkan kamu untuk mengirim paket yang didukung dengan metode COD atau Non-COD tanpa batas minimum pengiriman." />
-    <meta property="og:url" content="https://komship.id/" />
-    <meta property="og:site_name" content="Komship" />
-    <meta property="og:image" content="https://komship.id/img/komship.png" />
-    <meta property="og:image:width" content="500" />
-    <meta property="og:image:height" content="500" />
-    <meta property="og:see_also" content="https://www.instagram.com/komship/">
-    <meta property="og:see_also" content="https://www.facebook.com/komship/">
-    <script type="application/ld+json"> {"@context":"https://schema.org", "@type":"Organization", "name":"Komerce - Bangun Tim E-Commerce dengan Talent yang Berkompeten", "legalName":"Komerce", "alternateName":"Kampung Marketer", "founder":"Nofi Bayu Darmawan", "foundingDate":"2017", "foundingLocation":"Purbalingga", "logo":"https://komerce.id/assets/img/komerce.png", "image":"https://komerce.id/assets/img/komerce.png", "url":"https://komerce.id/", "address":{"@type":"PostalAddress", "streetAddress":"Jl. Raya Tamansari, Kompleks Karangwuni, Desa Tamansari, Karangmoncol", "addressLocality":"Purbalingga", "postalCode":"53355", "addressCountry":"ID"}, "contactPoint":{"@type":"ContactPoint", "contactType":"Customer service", "email":"mailto:contact@komerce.id", "telephone":"+6281360646002", "url":"https://komerce.id/contact"}, "sameAs":["https://www.facebook.com/komerce.official", "https://www.youtube.com/c/KampungMarketer", "https://www.linkedin.com/company/komerceid", "https://www.instagram.com/komerceid/"]} </script>
-    <script type="application/ld+json"> {"@context":"https://schema.org/", "@type":"WebSite", "name":"Komerce - Bangun Tim E-Commerce dengan Talent yang Berkompeten", "alternateName":"Kampung Marketer", "description":"Komerce adalah solusi kamu untuk membangun tim e-commerce yang berkompeten dengan mudah, murah, kapan pun dan di mana pun.","url":"https://komerce.id/", "image":{"@type":"ImageObject", "url":"https://komerce.id/assets/img/komerce.png", "height":"500", "width":"500"},"sameAs":["https://www.facebook.com/komerce.official", "https://www.youtube.com/c/KampungMarketer", "https://www.linkedin.com/company/komerceid", "https://www.instagram.com/komerceid/"], "potentialAction":{"@type":"SearchAction", "target":"https://komerce.id/pencarian?q={search_term_string}", "query-input":"required name=search_term_string"}} </script>
-    <link rel="icon" href="<%= BASE_URL %>komship.png">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <meta name="description"
+    content="Komship merupakan platform layanan pengiriman yang bertujuan memudahkan kamu untuk mengirim paket yang didukung dengan metode COD atau Non-COD tanpa batas minimum pengiriman." />
+  <meta name="keywords" content="komship" />
+  <meta name="facebook-domain-verification" content="z88e8ri851o9j99z9cpkg5zq6pw3ry" />
+  <link rel="canonical" href="https://komship.id/" />
+  <meta property="og:locale" content="id" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Komship.id" />
+  <meta property="og:description"
+    content="Komship merupakan platform layanan pengiriman yang bertujuan memudahkan kamu untuk mengirim paket yang didukung dengan metode COD atau Non-COD tanpa batas minimum pengiriman." />
+  <meta property="og:url" content="https://komship.id/" />
+  <meta property="og:site_name" content="Komship" />
+  <meta property="og:image" content="https://komship.id/img/komship.png" />
+  <meta property="og:image:width" content="500" />
+  <meta property="og:image:height" content="500" />
+  <meta property="og:see_also" content="https://www.instagram.com/komship/">
+  <meta property="og:see_also" content="https://www.facebook.com/komship/">
+  <script
+    type="application/ld+json"> {"@context":"https://schema.org", "@type":"Organization", "name":"Komerce - Bangun Tim E-Commerce dengan Talent yang Berkompeten", "legalName":"Komerce", "alternateName":"Kampung Marketer", "founder":"Nofi Bayu Darmawan", "foundingDate":"2017", "foundingLocation":"Purbalingga", "logo":"https://komerce.id/assets/img/komerce.png", "image":"https://komerce.id/assets/img/komerce.png", "url":"https://komerce.id/", "address":{"@type":"PostalAddress", "streetAddress":"Jl. Raya Tamansari, Kompleks Karangwuni, Desa Tamansari, Karangmoncol", "addressLocality":"Purbalingga", "postalCode":"53355", "addressCountry":"ID"}, "contactPoint":{"@type":"ContactPoint", "contactType":"Customer service", "email":"mailto:contact@komerce.id", "telephone":"+6281360646002", "url":"https://komerce.id/contact"}, "sameAs":["https://www.facebook.com/komerce.official", "https://www.youtube.com/c/KampungMarketer", "https://www.linkedin.com/company/komerceid", "https://www.instagram.com/komerceid/"]} </script>
+  <script
+    type="application/ld+json"> {"@context":"https://schema.org/", "@type":"WebSite", "name":"Komerce - Bangun Tim E-Commerce dengan Talent yang Berkompeten", "alternateName":"Kampung Marketer", "description":"Komerce adalah solusi kamu untuk membangun tim e-commerce yang berkompeten dengan mudah, murah, kapan pun dan di mana pun.","url":"https://komerce.id/", "image":{"@type":"ImageObject", "url":"https://komerce.id/assets/img/komerce.png", "height":"500", "width":"500"},"sameAs":["https://www.facebook.com/komerce.official", "https://www.youtube.com/c/KampungMarketer", "https://www.linkedin.com/company/komerceid", "https://www.instagram.com/komerceid/"], "potentialAction":{"@type":"SearchAction", "target":"https://komerce.id/pencarian?q={search_term_string}", "query-input":"required name=search_term_string"}} </script>
+  <link rel="icon" href="<%= BASE_URL %>komship.png">
+  <title>
+    <%= htmlWebpackPlugin.options.title %>
+  </title>
+
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-WQQP3NT');</script>
+  <!-- End Google Tag Manager -->
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WQQP3NT" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+</body>
+
 </html>
