--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
   <!-- End Google Tag Manager -->
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
