--- a/public/index1.html
+++ b/public/index1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="id">
   <head>
     <meta charset="utf-8">
@@ -27,7 +27,7 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app"></div> -->
     <!-- built files will be auto injected -->
-  </body>
-</html>
+  <!-- </body>
+</html> -->
