--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,7 @@
     <noscript><img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=1091145171732768&ev=PageView&noscript=1" /></noscript>
     <!-- End Meta Pixel Code -->
+    <script type="application/ld+json"> {"@context":"https://schema.org", "@type":"Organization", "name":"Komship", "legalName":"Komship", "logo":"https://komship.id/img/komship.png", "url":"https://komship.id/", "address":{"@type":"PostalAddress", "streetAddress":"Jl. Raya Tamansari, Kompleks Karangwuni, Desa Tamansari, Karangmoncol", "addressLocality":"Purbalingga", "postalCode":"53355", "addressCountry":"ID"}, "contactPoint":{"@type":"ContactPoint", "contactType":"Customer service", "email":"mailto:support@komship.id", "telephone":"081227931840"}, "sameAs":["https://www.facebook.com/komship/", "https://www.instagram.com/komship/"]} </script>
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
