--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>komship.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>
+    <!-- <title>
         <%= htmlWebpackPlugin.options.title %>
-    </title>
+    </title> -->
     <script>
         document.dispatchEvent(new Event('render-event'))
         document.dispatchEvent(new Event('my-document-event'))
