--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
         fbq('init', '1091145171732768');
         fbq('track', 'PageView');
     </script>
-    <script type="application/ld+json"> {"@context":"https://schema.org", "@type":"Organization", "name":"Komship", "legalName":"Komship", "logo":"https://komship.id/img/komship.png", "url":"https://komship.id/", "address":{"@type":"PostalAddress", "streetAddress":"Jl. Raya Tamansari, Kompleks Karangwuni, Desa Tamansari, Karangmoncol", "addressLocality":"Purbalingga", "postalCode":"53355", "addressCountry":"ID"}, "contactPoint":{"@type":"ContactPoint", "contactType":"Customer service", "email":"mailto:support@komship.id", "telephone":"081227931840"}, "sameAs":["https://www.facebook.com/komship/", "https://www.instagram.com/komship/"]} </script>
+    <!-- <script type="application/ld+json"> {"@context":"https://schema.org", "@type":"Organization", "name":"Komship", "legalName":"Komship", "logo":"https://komship.id/img/komship.png", "url":"https://komship.id/", "address":{"@type":"PostalAddress", "streetAddress":"Jl. Raya Tamansari, Kompleks Karangwuni, Desa Tamansari, Karangmoncol", "addressLocality":"Purbalingga", "postalCode":"53355", "addressCountry":"ID"}, "contactPoint":{"@type":"ContactPoint", "contactType":"Customer service", "email":"mailto:support@komship.id", "telephone":"081227931840"}, "sameAs":["https://www.facebook.com/komship/", "https://www.instagram.com/komship/"]} </script> -->
 
     <noscript><img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=1091145171732768&ev=PageView&noscript=1" /></noscript>
