--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <!-- <title>
         <%= htmlWebpackPlugin.options.title %>
     </title> -->
+    <meta vmid="description" name="description" content="">
     <script>
         document.dispatchEvent(new Event('render-event'))
         document.dispatchEvent(new Event('my-document-event'))
